fixing blue color button bug on iphone

--- a/components/Game/game.css
+++ b/components/Game/game.css
@@ -22,6 +22,7 @@
     margin: 20px;
     margin-top: 20px;
     transition: 0.3s all ease;
+    -webkit-tap-highlight-color: transparent;
 }
 
 
