--- a/components/square/square.css
+++ b/components/square/square.css
@@ -13,7 +13,7 @@
     padding: 20px;
     font-weight: 600;
     transition: 0.3s all ease-in-out;
-
+    -webkit-tap-highlight-color: transparent;
 }
 
 
